fix sidebar alignment until we add back social media

--- a/blog/wp-content/themes/mlc/_/css/xperience.scss
+++ b/blog/wp-content/themes/mlc/_/css/xperience.scss
@@ -125,7 +125,8 @@ body {
                         form#searchform {
                             position: relative;
                             width: 100%;
-                            margin-bottom: 20px;
+                            // margin-bottom: 20px;
+                            margin-bottom: 30px;
                             &:after {
                                 font-family: FontAwesome;
                                 font-size: 21px;
